# bwadvent

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  image-convert.sh  rustfmt.toml  tasks
.cargo/: config
collisions/: Cargo.toml
collisions/src/: lib.rs
maps/: adventure1.map  map.map  x2.map
src/maps/: map.map
src/png/: LICENSE  LICENSE-CC-BY-SA-3.0  README
src/rust/: lib.rs  main.rs
src/rust/level_serialization/: mod.rs
src/rust/map/: mod.rs
src/rust/mechanics/: mod.rs
src/rust/player/: mod.rs
src/rust/scenes/: editor.rs  mod.rs  play.rs
src/rust/settings/: mod.rs
src/xcf/: player.xcf
