[package]
name = "bwadvent"
version = "0.0.1"
authors = ["Dabo Ross <daboross@daboross.net>"]

[lib]
name = "bwadvent"
path = "src/rust/lib.rs"

[dependencies]
nom = "1.2"
time = "0.1"
piston = "0.23"
piston_window = "0.48"
pistoncore-sdl2_window = "0.31"
piston2d-graphics = "0.16"
piston2d-opengl_graphics = "0.30"
collisions = { git = "https://github.com/daboross/rust-temp-collisions.git" }
image = { version = "0.10", default-features = false, features = ["png"] }
